[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/game.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/lobby_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/lobby.gd" type="Script" id=5]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Game" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="HUD" parent="ViewportContainer" instance=ExtResource( 3 )]

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8

[node name="LobbyPlayer1" parent="Lobby/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 201.0
margin_bottom = 360.0

[node name="LobbyPlayer2" parent="Lobby/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_right = 407.0
margin_bottom = 360.0

[node name="LobbyPlayer3" parent="Lobby/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 411.0
margin_right = 613.0
margin_bottom = 360.0

[node name="LobbyPlayer4" parent="Lobby/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 617.0
margin_right = 819.0
margin_bottom = 360.0

[node name="StartGame" type="Button" parent="Lobby"]
visible = false
margin_left = 474.0
margin_top = 477.0
margin_right = 557.0
margin_bottom = 497.0
text = "Start Game"

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.35
anchor_right = 0.75
anchor_bottom = 0.5
margin_bottom = -16.2
custom_constants/separation = 20

[node name="LocalIP" type="Label" parent="MainMenu"]
margin_right = 512.0
margin_bottom = 14.0
text = "127.0.0.1"
align = 1

[node name="CreateServer" type="Button" parent="MainMenu"]
margin_top = 34.0
margin_right = 512.0
margin_bottom = 54.0
text = "Create server"

[node name="ServerIP" type="LineEdit" parent="MainMenu"]
margin_top = 74.0
margin_right = 512.0
margin_bottom = 98.0
align = 1
placeholder_text = "Enter IP Address..."

[node name="JoinServer" type="Button" parent="MainMenu"]
margin_top = 118.0
margin_right = 512.0
margin_bottom = 138.0
text = "Join server"

[connection signal="pressed" from="Lobby/StartGame" to="Lobby" method="_on_start_game_pressed"]
[connection signal="pressed" from="MainMenu/CreateServer" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="MainMenu/JoinServer" to="." method="_on_join_server_pressed"]
